# amath

./: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
